@@ -127,6 +127,13 @@
       [debugger setStatus: @"Terminated"];
     }
 
+  // Check certain status messages from GDB and set the state correctly.
+  range = [str rangeOfString: @"Program exited"];
+  if (range.location != NSNotFound)
+    {
+      [debugger setStatus: @"Terminated"];
+    }
+
   // FIXME: Filter this error, until we find a better way to deal with it.
   range = [str rangeOfString: @"[tcsetpgrp failed in terminal_inferior:"];
   if (range.location != NSNotFound)
